2006-07-10  Stephen Deasey  <sd@groks.org>

	* nsd/nsd.h:
	* nsd/driver.c:
	* nsd/connio.c: Create wrappers for the driver callback functions
	and document. Wrap some of the messy error reporting code.

2006-07-08  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/limits.c:
	* tcl/limits.tcl:
	* nsd/Makefile:
	* include/ns.h:
	* nsd/nsd.h:
	* nsd/conn.c:
	* nsd/init.c:
	* nsd/tclcmds.c:
	* tests/ns_limits.test:
	* test/ns_conn.test:
	* tests/test.nscfg: Add new ns_limits_ commands to manipulate
	per-request limits. Not hooked up to request processing yet,
	requires some work to move conn allocation back into the driver
	code.

	* include/nsthread.h:
	* nsthread/time.c:
	* nsd/tclcache.c:
	* tests/ns_cache.test: Add per-cache default timeouts. Timeout
	values passed using the -timeout switch can now be absolute or
	relative to the current time. Large values are assumed to be
	absolute, small values relative. 

2006-07-07  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/log.c: Fixed some struct arithmetic which ended up
	in writing into already freed memory.

2006-07-06  Vlad Seryakov  <seryakov@users.sf.net>

	* tests/nsdb.text: Updated with new error message

	* include/ns.h:
	* nsd/conn.c:
	* nsd/queue.c:
	* nsd/return.c: Make ns_conn keepliave 0|1 to enable or 
	disable keep-alive on current connection. Removed flag 
	NS_CONN_KEEPALIVE and instead connPtr->keep is used to 
	control keepailve behaviour.
	
2006-07-05  Bernd Eidenschink  <eide@users.sourceforge.net>

	* contrib/start-scripts/naviserver.SuSE: Added start script
	suitable for /etc/init.d which implements start, stop, restart,
	try-restart, realstop, version, probe, status. Configurable
	for use with or without watchdog and chroot environment.

2006-07-05  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* include/ns.h: Fixed so the compilation works again after
	cache.c and related changes.

	* nsd/log.c: Uses Ns_Fatal wrapper for Ns_SetLogFlushProc
	and Ns_SetNsLogProc
